Fix stylelint linters. Fix some eslinters

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeatherApp",
+  "name": "weatherapp",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
@@ -23,8 +23,16 @@
   },
   "homepage": "https://github.com/realisticattorney/WeatherApp#readme",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
     "css-loader": "^5.2.2",
+    "eslint": "^7.24.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1",
     "style-loader": "^2.0.0",
+    "stylelint": "^13.12.0",
+    "stylelint-config-standard": "^21.0.0",
+    "stylelint-csstree-validator": "^1.9.0",
+    "stylelint-scss": "^3.19.0",
     "webpack": "^5.33.2",
     "webpack-cli": "^4.6.0"
   },
