Remove needless host

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "WeatherApp",
+  "name": "weatherapp",
   "version": "1.0.0",
   "description": "",
   "main": "script.js",
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production",
+    "build": "webpack",
     "start": "webpack --watch"
   },
   "repository": {
