--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "deploy": "gh-pages -d build",
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "webpack --mode development",
-    "build": "webpack",
+    "build": "webpack --mode production",
     "start": "webpack --watch"
   },
   "repository": {
@@ -34,11 +34,15 @@
     "stylelint-csstree-validator": "^1.9.0",
     "stylelint-scss": "^3.19.0",
     "webpack": "^5.33.2",
-    "webpack-cli": "^4.6.0"
+    "webpack-cli": "^4.6.0",
+    "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
     "dotenv-quokka-plugin": "^1.0.0",
     "jsdom": "^16.5.3",
-    "node-fetch": "^2.6.1"
+    "node-fetch": "^2.6.1",
+    "webpack-dev-server": "^3.11.2",
+    "webpack": "^5.33.2",
+    "webpack-cli": "^4.6.0"
   }
 }
